--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -1,20 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather app by Lal M</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="card">
-        <div class="search">
-            <input class="input" type="text"  placeholder="Enter city name" spellcheck="false">
-            <button class="searchbtn"><img src="/Weather App/images/search.png" class="searchimg" alt="search.png"></button>
-        </div> <!--SearchDIV-->
-        <div class="weather">
-            
+      <div class="search">
+        <input
+          class="input"
+          type="text"
+          placeholder="Enter city name"
+          spellcheck="false"
+        />
+        <button class="searchbtn">
+          <img src="/images/search.png" class="searchimg" alt="search.png" />
+        </button>
+      </div>
+      <!--SearchDIV-->
+
+      <div class="weather">
+        <div class="cloud">
+          <img class="weatherimg" src="/images/clouds.png" alt="clouds.png" />
+          <h1 class="temp">23°C</h1>
+          <h4 class="realfeal">Real Feel</4>
+          <h4 class="Feel">29°C</4>
+          <h2 class="city">Quetta, Balochistan</h2>
         </div>
-    </div><!--cardDIV-->
-</body>
+        <!--cloudDIV-->
+
+        <div class="detailes">
+          <div class="humid">
+            <img src="/images/humid.png" width="50px" alt="humid.png" />
+            <h3 class="humidtitle">Humidity</h3>
+            <h4 class="humidvalue">50%</h4>
+          </div>
+          <div class="wind">
+            <img
+              src="/images/wind.png"
+              width="50px"
+              alt="humidity.png"
+              class="windpng"
+            />
+            <h3 class="humidtitle">Wind Speed</h3>
+            <h4 class="windvalue">12 KP/H</h4>
+          </div>
+        </div>
+        <!--detailesDIV-->
+      </div>
+      <!--weatherDIV-->
+    </div>
+    <!--cardDIV-->
+    <script src="script.js"></script>
+  </body>
 </html>
